<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/eventNavItem"
        android:enabled="true"
        android:icon="@drawable/rounded_event_24"
        android:title="@string/event_title" />

    <item
        android:id="@+id/guestNavItem"
        android:enabled="true"
        android:icon="@drawable/rounded_groups_24"
        android:title="@string/guest_title" />

    <item
        android:id="@+id/budgetNavItem"
        android:enabled="true"
        android:icon="@drawable/rounded_attach_money_24"
        android:title="@string/budget_title" />

    <item
        android:id="@+id/vendorNavItem"
        android:enabled="true"
        android:icon="@drawable/rounded_person_apron_24"
        android:title="@string/vendor_title" />
</menu>