<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:background="@color/light_violet"
    tools:context=".About">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/list_back"
        android:backgroundTint="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/list_back"
            android:backgroundTint="@color/white"
            android:elevation="4dp"
            android:fadingEdgeLength="3dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageButton
                android:id="@+id/backToHome"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="0dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/back_to_home"
                android:padding="10dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/rounded_arrow_back_24" />

            <TextView
                android:id="@+id/backText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/aclonica"
                android:letterSpacing="0.09"
                android:text="Back to Home"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Logo at the right end -->
            <ImageView
                android:id="@+id/logoView"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/planit_logo" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/aclonica"
        android:shadowColor="#FFFFFF"
        android:text="About"
        android:textColor="#020202"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout3" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/list_back"
        android:elevation="4dp"
        android:fadingEdgeLength="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/aboutDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/about_app"
            android:textColor="#000000" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>